--- a/rfp.html
+++ b/rfp.html
@@ -3,11 +3,16 @@ layout: base
 permalink: /request-for-proposal/index.html
 title: Request for Proposal
 ---
+
 {% assign data = site.data.general.items %}
 
 <div class="container py-5">
     <h1>{{data.rfp.heading}}</h1>
     <p>{{data.rfp.text}}</p>
     <p>{{data.rfp.cta.text}}</p>
-    <p><a class="btn btn-primary fw-bold" href="{{data.rfp.cta.button.url}}">{{data.rfp.cta.button.text}}</a></p>
+    <p>
+        <a class="btn btn-primary fw-bold" href="{{data.rfp.cta.button.url}}">
+            {{data.rfp.cta.button.text}}
+        </a>
+    </p>
 </div>
