--- a/connect.html
+++ b/connect.html
@@ -23,17 +23,22 @@ title: Connect
         <!-- Calendly inline widget end -->
     </section>
     <section class="mt-5">
-        <h2 class="text-center">{{data.connect.message.heading}}</h2>
         <div class="row mt-4 justify-content-center">
-            <div class="col-md-8 col-lg-5">
-                <form name="contact" method="POST" netlify>
-                    <!-- TODO: Handle form success, add action="/connect/index.html?form=success"  and javascript -->
-
+            <div class="col-md-5">
+                <h2>{{data.connect.message.heading}}</h2>
+                <form
+                    class="mb-4"
+                    action="/connect/success/"
+                    name="contact"
+                    method="POST"
+                    netlify
+                >
                     <p class="fw-bold mb-1">
                         I am a...
                         <sup>*</sup>
                     </p>
                     <select
+                        name="contact_category"
                         class="form-select"
                         aria-label="Default select example"
                     >
@@ -51,6 +56,7 @@ title: Connect
                         <sup>*</sup>
                     </label>
                     <input
+                        name="email"
                         type="email"
                         class="form-control"
                         id="inputEmail"
@@ -65,6 +71,7 @@ title: Connect
                         <sup>*</sup>
                     </label>
                     <input
+                        name="first_name"
                         type="text"
                         class="form-control"
                         id="inputFName"
@@ -79,6 +86,7 @@ title: Connect
                         <sup>*</sup>
                     </label>
                     <input
+                        name="last_name"
                         type="text"
                         class="form-control"
                         id="inputLName"
@@ -93,13 +101,14 @@ title: Connect
                         <sup>*</sup>
                     </label>
                     <textarea
+                        name="message"
                         class="form-control"
                         id="inputMessage"
                         rows="4"
                         required
                     ></textarea>
 
-                    <button type="submit" class="btn btn-primary mt-4">
+                    <button type="submit" class="btn btn-primary mt-4 px-4">
                         Send
                     </button>
                 </form>
@@ -109,12 +118,8 @@ title: Connect
                     are required.
                 </p>
             </div>
-        </div>
-    </section>
-    <section class="mt-5">
-        <h2 class="text-center">Location</h2>
-        <div class="mt-4 row justify-content-center">
-            <div class="col-sm-6 col-md-4 col-lg-2">
+            <div class="col-md-4 offset-md-1">
+                <h2 class="mb-4">Contact Info</h2>
                 <p>
                     {{site.address.street}}
                     <br />
