--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 layout: base
 title:
 ---
-<!-- assign variable to invalidate cache upon each new build -->
-{% assign cache_buster = site.time | date: '%s%N' %}
 
-{% assign data = site.data.general.items %}
+<!-- assign variable to invalidate cache upon each new build -->
+{% assign cache_buster = site.time | date: '%s%N' %} {% assign data =
+site.data.general.items %}
 
 <div class="video-container">
-    <video playsinline autoplay muted loop poster="/assets/video/poster.jpg" id="bgvid">
-        <source src="/assets/video/hero-video.mp4" type="video/mp4">
+    <video
+        playsinline
+        autoplay
+        muted
+        loop
+        poster="/assets/video/poster.jpg"
+        id="bgvid"
+    >
+        <source src="/assets/video/hero-video.mp4" type="video/mp4" />
     </video>
     <div class="container">
         <div class="row justify-content-center">
@@ -17,7 +24,11 @@ title:
                 <h1 class="fw-bold">{{data.home.video.tagline}}</h1>
                 <a class="d-none d-sm-block mt-5" href="#mission">
                     <span class="pulse-button bg-primary">
-                        <img class="pulse-icon" src="/assets/img/chevron-down.png" alt="Down Button" />
+                        <img
+                            class="pulse-icon"
+                            src="/assets/img/chevron-down.png"
+                            alt="Down Button"
+                        />
                     </span>
                 </a>
             </div>
@@ -27,26 +38,35 @@ title:
 
 <div id="mission" class="container py-5">
     <section>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center pt-3 mt-5">
             <div class="col-sm-9 col-lg-7">
                 <p class="lead">{{data.home.blurb}}</p>
             </div>
-        </div>    
+        </div>
     </section>
 
     <section class="mt-5 text-center">
         <h2>{{data.home.team.heading}}</h2>
         <div class="row justify-content-center g-4 mt-4">
-        {% for i in data.profile.team.items %}
-        <div class="col-6 col-md-3 text-start">
-            <img style="object-fit: cover;height: 300px;width: 250px" class="img-fluid" src="{{i.img}}" alt="{{i.name}}" />
-            <p class="fw-bold mt-2 mb-0">{{i.name|truncatewords: 1, ''}}</p>
-            <p>{{i.title}}</p>
-        </div>
-        {% endfor %}
+            {% for i in data.profile.team.items %}
+            <div class="col-6 col-md-3 text-start">
+                <img
+                    style="object-fit: cover; height: 300px; width: 250px"
+                    class="img-fluid"
+                    src="{{i.img}}"
+                    alt="{{i.name}}"
+                />
+                <p class="fw-bold mt-2 mb-0">{{i.name|truncatewords: 1, ''}}</p>
+                <p>{{i.title}}</p>
+            </div>
+            {% endfor %}
         </div>
 
-        <p><a href="/profile/" class="btn btn-primary mt-4 fw-bold">{{data.home.team.button.text}}</a></p>
+        <p>
+            <a href="/profile/" class="btn btn-primary mt-4 fw-bold">
+                {{data.home.team.button.text}}
+            </a>
+        </p>
     </section>
 </div>
 
@@ -55,7 +75,9 @@ title:
         <h3>Follow us on social media</h3>
         <p class="mb-0">
             {% for i in site.social_media %}
-            <a href="{{i.url}}" target="_blank" class="me-3"><i class="bi-{{i.name}} text-white fs-1"></i></a>
+            <a href="{{i.url}}" target="_blank" class="me-3">
+                <i class="bi-{{i.name}} text-white fs-1"></i>
+            </a>
             {% endfor %}
         </p>
     </div>
@@ -65,6 +87,13 @@ title:
     <section class="py-5 my-5">
         <h2>{{data.home.rfp.heading}}</h2>
         <p>{{data.home.rfp.text}}</p>
-        <p><a href="{{data.home.rfp.button.url}}" class="btn btn-primary fw-bold">{{data.home.rfp.button.text}}</a></p>
+        <p>
+            <a
+                href="{{data.home.rfp.button.url}}"
+                class="btn btn-primary fw-bold"
+            >
+                {{data.home.rfp.button.text}}
+            </a>
+        </p>
     </section>
 </div>
