--- a/rfp.html
+++ b/rfp.html
@@ -7,12 +7,19 @@ title: Request for Proposal
 {% assign data = site.data.general.items %}
 
 <div class="container py-5">
-    <h1>{{data.rfp.heading}}</h1>
-    <p>{{data.rfp.text}}</p>
-    <p>{{data.rfp.cta.text}}</p>
-    <p>
-        <a class="btn btn-primary fw-bold" href="{{data.rfp.cta.button.url}}">
-            {{data.rfp.cta.button.text}}
-        </a>
-    </p>
+    <div class="row">
+        <div class="col-md-10">
+            <h1>{{data.rfp.heading}}</h1>
+            <p>{{data.rfp.text}}</p>
+            <p>{{data.rfp.cta.text}}</p>
+            <p>
+                <a
+                    class="btn btn-primary fw-bold"
+                    href="{{data.rfp.cta.button.url}}"
+                >
+                    {{data.rfp.cta.button.text}}
+                </a>
+            </p>
+        </div>
+    </div>
 </div>
