--- a/profile.html
+++ b/profile.html
@@ -26,30 +26,52 @@ title: Profile
             'type': 'TeamCollection',
             'people': [
             {% for i in data.profile.team.items %}
-                {
-                    'type': 'TeamMember',
-                    'properties': {
-                        'name': '{{i.name}}',
-                        'iconSize': [60, 60],
-                        'iconUrl': '{{i.img}}',
-                        'title': '{{i.title}}'
-                    },
-                    'geometry': {
-                        'type': 'Point',
-                        'coordinates': [{{i.latlong[1]}},{{i.latlong[0]}}]
-                    }
-                }{% unless forloop.last %},{% endunless %}
-                {% endfor %}
+            {
+                'type': 'TeamMember',
+                'properties': {
+                    'name': '{{i.name}}',
+                    'iconSize': [60, 60],
+                    'iconUrl': '{{i.img}}',
+                    'title': '{{i.title}}'
+                },
+                'geometry': {
+                    'type': 'Point',
+                    'coordinates': [{{i.latlong[1]}},{{i.latlong[0]}}]
+                }
+            }{% unless forloop.last %},{% endunless %}
+            {% endfor %}
+            ]
+        }
+
+        var offices = {
+            'type': 'OfficeLocation',
+            'locations': [
+            {% for i in data.profile.map.offices %}
+            {
+                'type': 'OfficeLocation',
+                'properties': {
+                    'id': '{{i.location}}',
+                    'name': '{{i.name}}',
+                    'iconSize': [60, 60],
+                    'iconUrl': '/assets/img/marker.png',
+                    'title': '{{i.title}}'
+                },
+                'geometry': {
+                    'type': 'Point',
+                    'coordinates': [{{i.latlong[1]}},{{i.latlong[0]}}]
+                }
+            }{% unless forloop.last %},{% endunless %}
+            {% endfor %}
             ]
         }
         mapboxgl.accessToken = 'pk.eyJ1Ijoic21ubWYiLCJhIjoiY2trbjN2d2N5MWs3djJ2bXF2dm9jeDg4aCJ9.8QrQsswYRpYrbw2PAbCXmA';
         var mq = window.matchMedia("(min-width: 576px)");
         var zoomlvl = (mq.matches ? 1 : 0)
-        var centre = (mq.matches ?  [-50,25] : [-20,25])
+        var center = (mq.matches ?  [-50,25] : [-20,25])
         var map = new mapboxgl.Map({
             container: 'profile-map',
             style: 'mapbox://styles/smnmf/ckknbgr8n51xx17qx1waebm9i',
-            center: centre,
+            center: center,
             zoom: zoomlvl
         });
         team.people.forEach(function (marker) {
@@ -62,9 +84,18 @@ title: Profile
                 .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
                     .setHTML('<div class="text-start mt-3"><h5 class="mb-0">' + marker.properties.name + '</h5><p class="fs-6">' + marker.properties.title + '</p></div>'))
                 .addTo(map);
-            console.log('Marker added:'+ marker.properties.name + 'iconurl: https://aerofleetone.com' + marker.properties.iconUrl)
-        })
+        });
+        offices.locations.forEach(function (marker) {
+            var el = document.createElement('div');
+            el.className = 'marker';
+            el.style.backgroundImage = 'url(https://aerofleetone.com' + marker.properties.iconUrl + ')';
 
+            var location = new mapboxgl.Marker(el)
+                .setLngLat(marker.geometry.coordinates)
+                .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
+                    .setHTML('<div class="text-start mt-3"><h5 class="mb-0 fs-5">' + marker.properties.title + '</h5><p class="fs-6">' + marker.properties.name + '</p>' +'</div>'))
+                .addTo(map);
+        });
     </script>
     <section>
         <div
