Add individual description tags for pages

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 layout: base
 permalink: /about/index.html
 title: About
+description: We believe that drones are the future of aerial services, and we want to help bring this to fruition.
 ---
 
 {% assign data = site.data.general.items %}
