--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 layout: base
 permalink: /profile/index.html
 title: Profile
+description: Aero Fleet One’s team is distributed across the globe, though our operations are focused in North, Central, and South America.
 ---
 
 {% assign data = site.data.general.items %}
