--- a/rfp.html
+++ b/rfp.html
@@ -2,6 +2,7 @@
 layout: base
 permalink: /request-for-proposal/index.html
 title: Request for Proposal
+description: Got a UAS Plan? Submit responses to our Request for Proposals.
 ---
 
 {% assign data = site.data.general.items %}
