--- a/connect.html
+++ b/connect.html
@@ -2,6 +2,7 @@
 layout: base
 permalink: /connect/index.html
 title: Connect
+description: Get in touch by scheduling a meeting or sending us a direct message.
 ---
 
 {% assign data = site.data.general.items %}
