--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ site.data.general.items %}
         <div class="row justify-content-end">
             <div class="col-md-5 video-header">
                 <h1 class="fw-bold fs-1">{{data.home.video.tagline}}</h1>
-                <h2 class="fw-bold fs-6 mt-4">{{data.home.video.subtagline}}</h2>
+                <h2 class="fw-bold fs-6 mt-4">
+                    {{data.home.video.subtagline}}
+                </h2>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -47,7 +49,7 @@ site.data.general.items %}
     <section class="mt-5 text-center">
         <h2 class="pt-3">{{data.home.team.heading}}</h2>
         <div class="row justify-content-center g-4 mt-4">
-            {% for i in data.profile.team.items %}
+            {% for i in data.profile.team.items %} {% if i.active %}
             <div class="col-6 col-md-3 text-start">
                 <img
                     style="object-fit: cover; height: 300px; width: 250px"
@@ -58,7 +60,7 @@ site.data.general.items %}
                 <p class="fw-bold mt-2 mb-0">{{i.name|truncatewords: 1, ''}}</p>
                 <p>{{i.title}}</p>
             </div>
-            {% endfor %}
+            {% endif %} {% endfor %}
         </div>
 
         <p>
