--- a/profile.html
+++ b/profile.html
@@ -116,14 +116,17 @@ description: Aero Fleet One’s team is distributed across the globe, though our
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title mb-1 fw-bold">
                             {{i.name}}
+                            {% if i.linkedin %}
                             <span>
                                 <a href="{{i.linkedin}}" target="_blank">
                                     <i class="ms-1 bi-linkedin fs-4"></i>
                                 </a>
                             </span>
+                            {% endif %}
                         </h5>
                         <p class="fw-bold">{{i.title}}</p>
                         <p>{{i.text}}</p>
+                        {% if i.mail %}
                         <p class="card-text mt-auto">
                             <a
                                 href="mailto:{{i.mail}}"
@@ -132,6 +135,7 @@ description: Aero Fleet One’s team is distributed across the globe, though our
                                 {{i.mail}}
                             </a>
                         </p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
