Add structure to homepage, fix other pages as needed

--- a/connect.html
+++ b/connect.html
@@ -27,97 +27,7 @@ description: Get in touch by scheduling a meeting or sending us a direct message
         <div class="row mt-4 justify-content-center">
             <div class="col-md-5">
                 <h2>{{data.connect.message.heading}}</h2>
-                <form
-                    class="mb-4"
-                    action="/connect/success/"
-                    name="contact"
-                    method="POST"
-                    netlify
-                >
-                    <p class="fw-bold mb-1">
-                        I am a...
-                        <sup>*</sup>
-                    </p>
-                    <select
-                        name="contact_category"
-                        class="form-select"
-                        aria-label="Default select example"
-                    >
-                        <option selected disabled>Choose one</option>
-                        {% for i in data.connect.message.contact_form.roles %}
-                        <option value="{{i| handleize}}">{{i}}</option>
-                        {% endfor %}
-                    </select>
-
-                    <label
-                        for="inputEmail"
-                        class="form-label mt-3 mb-0 fw-bold"
-                    >
-                        Email
-                        <sup>*</sup>
-                    </label>
-                    <input
-                        name="email"
-                        type="email"
-                        class="form-control"
-                        id="inputEmail"
-                        required
-                    />
-
-                    <label
-                        for="inputEmail"
-                        class="form-label mt-3 mb-0 fw-bold"
-                    >
-                        First Name
-                        <sup>*</sup>
-                    </label>
-                    <input
-                        name="first_name"
-                        type="text"
-                        class="form-control"
-                        id="inputFName"
-                        required
-                    />
-
-                    <label
-                        for="inputEmail"
-                        class="form-label mt-3 mb-0 fw-bold"
-                    >
-                        Last Name
-                        <sup>*</sup>
-                    </label>
-                    <input
-                        name="last_name"
-                        type="text"
-                        class="form-control"
-                        id="inputLName"
-                        required
-                    />
-
-                    <label
-                        for="inputEmail"
-                        class="form-label mt-3 mb-0 fw-bold"
-                    >
-                        Message
-                        <sup>*</sup>
-                    </label>
-                    <textarea
-                        name="message"
-                        class="form-control"
-                        id="inputMessage"
-                        rows="4"
-                        required
-                    ></textarea>
-
-                    <button type="submit" class="btn btn-primary mt-4 px-4">
-                        Send
-                    </button>
-                </form>
-                <p class="mt-4">
-                    Fields marked with
-                    <sup>*</sup>
-                    are required.
-                </p>
+                {% include contact.html %}
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2 class="mb-4">Contact Info</h2>
