--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@ parallax: true
                         src="{% if i.img %}{{i.img}}{% else %}/assets/img/drone-crop-spraying.jpg{% endif %}"
                     />
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 mt-3">
                     <h2>{{i.title}}</h2>
                     <p>{{i.content|truncatewords: 20}}</p>
                     <p><a class="stretched-link" href="{{i.url|remove: "index.html"}}">Read More ></a></p>
