--- a/index.html
+++ b/index.html
@@ -1,74 +1,131 @@
 ---
 layout: base
 title:
+parallax: True
 ---
 
 <!-- assign variable to invalidate cache upon each new build -->
 {% assign cache_buster = site.time | date: '%s%N' %} {% assign data =
 site.data.general.items %}
 
-<div class="video-container">
-    <video
-        playsinline
-        autoplay
-        muted
-        loop
-        poster="/assets/video/poster.jpg"
-        id="bgvid"
-    >
-        <source src="/assets/video/hero-video.mp4" type="video/mp4" />
-    </video>
-    <div class="container">
-        <div class="row justify-content-end">
-            <div class="col-md-5 video-header">
-                <h1 class="fw-bold fs-1">{{data.home.video.tagline}}</h1>
-                <h2 class="fw-bold fs-6 mt-4">
-                    {{data.home.video.subtagline}}
-                </h2>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div
-                class="col-md-4 position-relative d-flex align-items-center flex-column"
+<div
+    class="parallax-window d-flex align-items-center justify-content-center"
+    data-image-src="/assets/img/drone-crop-spraying.jpg"
+    data-parallax="scroll"
+    style="height: 60vh"
+>
+    <div class="p-3">
+        <h1>{{data.home.top.headline}}</h1>
+        <h3 class="text-white">{{data.home.top.subline}}</h3>
+        <p>
+            <a
+                href="{{data.home.top.button.url}}"
+                class="mt-4 btn btn-lg fw-semibold fs-4 btn-primary"
             >
-                <a class="d-none d-sm-block mt-5" href="#team">
-                    <span style="top: -50px" class="pulse-button bg-primary">
-                        <img
-                            class="pulse-icon"
-                            src="/assets/img/chevron-down.png"
-                            alt="Down Button"
-                        />
-                    </span>
-                </a>
-            </div>
+                {{data.home.top.button.text}}
+            </a>
+        </p>
+    </div>
+</div>
+
+<div class="container py-5 my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 col-sm-10">
+            <h2 class="fs-1">{{data.home.boilerplate.text}}</h2>
         </div>
     </div>
 </div>
 
-<div id="team" class="container py-5">
-    <section class="mt-5 text-center">
-        <h2 class="pt-3">{{data.home.team.heading}}</h2>
-        <div class="row justify-content-center g-4 mt-4">
-            {% for i in data.profile.team.items %} {% if i.active %}
-            <div class="col-6 col-md-3 text-start">
-                <img
-                    style="object-fit: cover; height: 300px; width: 250px"
-                    class="img-fluid"
-                    src="{{i.img}}"
-                    alt="{{i.name}}"
-                />
-                <p class="fw-bold mt-2 mb-0">{{i.name|truncatewords: 1, ''}}</p>
-                <p>{{i.title}}</p>
-            </div>
-            {% endif %} {% endfor %}
+<div class="container py-5 my-5">
+    {% for i in data.home.galleries.items %} {% assign test =
+    forloop.index|modulo: 2 %}
+    <div class="row mt-4 justify-content-center">
+        <div class="col-md-6 order-xs-last px-0 px-sm-3">
+            <img src="{{i.src}}" alt="{{i.text}}" class="img-fluid" />
         </div>
+        <div
+            class="col-md-6 align-self-center {% if test == 0 %}order-sm-first{% endif %}"
+        >
+            <p class="fs-2 fw-semibold py-5 px-2 px-sm-5">{{i.text}}</p>
+        </div>
+    </div>
+    {% endfor %}
+    <div class="row justify-content-center mt-5 pt-5">
+        <div class="col-md-6 align-self-center px-3 px-sm-5">
+            <h3 class="fs-2 fw-semibold">
+                {{data.home.galleries.about.heading}}
+            </h3>
+            <p class="mt-4">{{data.home.galleries.about.text}}</p>
+            <p class="mt-4">
+                <a
+                    href="{{data.home.galleries.about.button.url}}"
+                    class="btn btn-primary fw-semibold"
+                >
+                    {{data.home.galleries.about.button.text}}
+                </a>
+            </p>
+        </div>
+        <div class="col-md-6 px-0 px-sm-3">
+            <img
+                src="{{data.home.galleries.about.img}}"
+                alt="{{i.text}}"
+                class="img-fluid"
+            />
+        </div>
+    </div>
+</div>
 
-        <p>
-            <a href="/profile/" class="btn btn-primary mt-4 fw-bold">
-                {{data.home.team.button.text}}
-            </a>
-        </p>
-    </section>
+<div
+    class="py-5 my-5"
+    style="background-image: url('{{data.home.blog.img}}');background-size: cover;background-position: bottom"
+>
+    <div class="container" style="min-height: 60vh">
+        <h2 class="fs-1 pt-5 my-5 text-center text-white">
+            {{data.home.blog.heading}}
+        </h2>
+        <div class="row mt-5">
+            {% for i in site.posts limit:3 %}
+            <div class="col-md-4 mb-4">
+                <a href="{{i.url}}">
+                    <div
+                        class="position-relative"
+                        style="min-height: 300px;background-image: url('{% if i.img %}{{i.img}}{% else %}{{data.home.blog.img}}'){% endif %};background-size:cover"
+                    >
+                        <div
+                            class="p-4 d-flex position-absolute w-100 h-100"
+                            style="
+                                background-color: rgba(128, 128, 128, 0.65);
+                                top: 0;
+                                left: 0;
+                            "
+                        >
+                            <h3
+                                class="fs-2 text-center text-white fw-semibold text-center mt-auto"
+                            >
+                                {{i.title}}
+                            </h3>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+<div class="container py-5 my-5">
+    <div class="row align-items-center">
+        <div
+            id="messageCol"
+            class="col-md-6 h-100 d-inline-block"
+            style="background-image: url('{{data.home.message.img}}');background-position: bottom left;"
+        >
+            <h2 class="text-white fs-1 mt-5 pt-5 ms-5 ps-5">
+                {{data.home.message.heading}}
+            </h2>
+        </div>
+        <div class="col-md-6 pt-5">{% include contact.html %}</div>
+    </div>
 </div>
 
 <div class="bg-primary py-5 text-white text-center">
@@ -88,19 +145,4 @@ site.data.general.items %}
             {% endfor %}
         </p>
     </div>
-</div>
-
-<div class="container py-5 text-center">
-    <section class="py-5 my-5">
-        <h2>{{data.home.rfp.heading}}</h2>
-        <p>{{data.home.rfp.text}}</p>
-        <p>
-            <a
-                href="{{data.home.rfp.button.url}}"
-                class="btn btn-primary fw-bold"
-            >
-                {{data.home.rfp.button.text}}
-            </a>
-        </p>
-    </section>
 </div>
