Update texts, make parallax background top aligned

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: base
 permalink: /about/index.html
-title: About
-description: We believe that drones are the future of aerial services, and we want to help bring this to fruition.
+title: About us | Aero Fleet One | Aerial Application
+description: We are an Aerial Services Company that champions technological advances in the agricultural aviation industry.
 parallax: true
 ---
 
@@ -20,6 +20,7 @@ parallax: true
     class="parallax-window d-flex align-items-center justify-content-center"
     data-image-src="/assets/img/drone-crop-spraying.jpg"
     data-parallax="scroll"
+    data-position="top"
     style="height: 60vh;"
 >
     <div>
@@ -44,8 +45,8 @@ parallax: true
 </div>
 
 <div class="container py-5 my-5">
-    <h2>{{data.about.history.heading}}</h2>
-    <p>{{data.about.history.text}}</p>
+    <h2>{{data.about.mission.heading}}</h2>
+    <p>{{data.about.mission.text}}</p>
 </div>
 
 <div class="container py-5 my-5">
