--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 ---
 layout: base
 permalink: /blog/index.html
+title: Blog | Aero Fleet One
+description: We share knowledge, news, and opinions surrounding the intersection of ag, tech, and aviation.
 parallax: true
 ---
 
@@ -10,6 +12,7 @@ parallax: true
     class="parallax-window d-flex align-items-center justify-content-center"
     data-image-src="/assets/img/drone-crop-spraying.jpg"
     data-parallax="scroll"
+    data-position="top"
     style="height: 60vh"
 >
     <div>
