--- a/connect.html
+++ b/connect.html
@@ -1,8 +1,8 @@
 ---
 layout: base
 permalink: /connect/index.html
-title: Connect
-description: Get in touch by scheduling a meeting or sending us a direct message.
+title: Connect | Aero Fleet One
+description: Got a UAS Plan, a vision or a project? Schedule a meeting instantly with one of our team members.
 ---
 
 {% assign data = site.data.general.items %}
