--- a/media.html
+++ b/media.html
@@ -1,8 +1,8 @@
 ---
 layout: base
 permalink: /media/index.html
-title: Profile
-description: Aero Fleet One’s team is distributed across the globe, though our operations are focused in North, Central, and South America.
+title: Media | Aero Fleet One
+description: Find the latest posts across Aero Fleet One’s social media channels about agricultural aviation, drone technology, ag-tech & more.
 parallax: True
 ---
 
