--- a/about.html
+++ b/about.html
@@ -34,7 +34,8 @@ parallax: true
         {% for i in data.about.boxes %}
         <div class="col">
             <div class="card rounded-1 border border-primary h-100">
-                <div class="card-body">
+                <div class="card-body d-flex justify-content-between align-items-center flex-column">
+                <img src="/assets/img/partner.png" class="img-fluid"  style="filter: invert(1)"/>
                     <h5 class="card-title fw-semibold">{{i.heading}}</h5>
                     <p class="card-text mt-3">{{i.text}}</p>
                 </div>
