--- a/connect.html
+++ b/connect.html
@@ -52,3 +52,28 @@ description: Got a UAS Plan, a vision or a project? Schedule a meeting instantly
         </div>
     </section>
 </div>
+
+<script type="text/javascript">
+    _linkedin_partner_id = "3585297";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script>
+<script type="text/javascript">
+    (function () {
+        var s = document.getElementsByTagName("script")[0];
+        var b = document.createElement("script");
+        b.type = "text/javascript";
+        b.async = true;
+        b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+        s.parentNode.insertBefore(b, s);
+    })();
+</script>
+<noscript>
+    <img
+        height="1"
+        width="1"
+        style="display: none"
+        alt=""
+        src="https://px.ads.linkedin.com/collect/?pid=3585297&fmt=gif"
+    />
+</noscript>
