--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@ parallax: true
 
 <div
     class="parallax-window d-flex align-items-center justify-content-center"
-    data-image-src="/assets/img/drone-crop-spraying.jpg"
+    data-image-src="/assets/img/about/ag-aircraft-spraying-farm-field.jpg"
     data-parallax="scroll"
-    data-position="top"
+    data-position=""
     style="height: 60vh;"
 >
     <div>
@@ -35,7 +35,7 @@ parallax: true
         <div class="col">
             <div class="card rounded-1 border border-primary h-100">
                 <div class="card-body d-flex justify-content-between align-items-center flex-column">
-                <img src="/assets/img/partner.png" class="img-fluid"  style="filter: invert(1)"/>
+                <img src="{{i.icon}}" class="img-fluid" alt="{{i.heading}}" style="max-width: 150px;"/>
                     <h5 class="card-title fw-semibold">{{i.heading}}</h5>
                     <p class="card-text mt-3">{{i.text}}</p>
                 </div>
