--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@ permalink: /media/index.html
 title: Media | Aero Fleet One
 description: Find the latest posts across Aero Fleet One’s social media channels about agricultural aviation, drone technology, ag-tech & more.
 parallax: True
-curator:  True
+curator: True
 ---
 
 {% assign data = site.data.general.items %}
@@ -27,14 +27,16 @@ curator:  True
     <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center py-5">
         {% for i in site.news %}
         <div class="col">
-            <div class="card p-4 h-100 border border-2 border-primary rounded-1">
+            <div
+                class="card p-4 h-100 border border-2 border-primary rounded-1"
+            >
                 <div class="card-body d-flex flex-column">
-                    <h3 class="card-title mb-1">
-                        {{i.title}}
-                    </h3>
+                    <h3 class="card-title mb-1">{{i.title}}</h3>
                     <p>{{i.content}}</p>
                     <p class="mt-auto">
-                        <a target="_blank" rel="noopener" href="{{i.link}}">Learn more...</a>
+                        <a target="_blank" rel="noopener" href="{{i.link}}">
+                            Learn more...
+                        </a>
                     </p>
                 </div>
             </div>
@@ -44,8 +46,15 @@ curator:  True
 </div>
 
 <div class="container py-5 my-5">
-    <h2>{{data.media.social.heading}}
-    <div id="curator-feed">
-        <a href="https://curator.io" target="_blank" class="crt-logo">Powered by Curator.io</a>
-    </div>
+    <h2>{{data.media.social.heading}}</h2>
+    <script
+        async
+        src="https://walls.io/js/wallsio-widget-1.2.js"
+        data-wallurl="https://my.walls.io/s6n8w?nobackground=1&amp;show_header=0"
+        data-title="My social wall"
+        data-width="100%"
+        data-autoheight="1"
+        data-height="800"
+        data-lazyload="1"
+    ></script>
 </div>
