--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@ parallax: true
     data-position="top"
     style="height: 60vh"
 >
-    <div>
+    <div class="p-3">
         <h1>{{data.blog.heading}}</h1>
         <h3 class="text-white">{{data.blog.subheading}}</h3>
     </div>
@@ -42,7 +42,7 @@ parallax: true
             <hr class="mb-5" />
             {% endfor %}
         </div>
-
+        {% if site.tags.size > 1 %}
         <div class="col-md-3 bg-light py-4 ps-2">
             <div class="p-4">
                 {% for tag in site.tags %}
@@ -57,5 +57,6 @@ parallax: true
                 {% endfor %}
             </div>
         </div>
+        {% endif %}
     </div>
 </div>
