--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ site.data.general.items %}
 
 <div
     class="parallax-window d-flex align-items-center justify-content-center"
-    data-image-src="/assets/img/drone-crop-spraying.jpg"
+    data-image-src="/assets/img/agricultural-aircraft-crop-dusting.jpg"
     data-parallax="scroll"
     data-position="top"
     style="height: 60vh"
@@ -105,7 +105,15 @@ site.data.general.items %}
                         style="min-height: 300px;background-image: url('{% if i.img %}{{i.img}}{% else %}{{data.home.blog.img}}'){% endif %};background-size:cover"
                     >
                         <div
-                            class="p-4 d-flex position-absolute w-100 h-100"
+                            class="
+                                p-4
+                                d-flex
+                                flex-column
+                                position-absolute
+                                text-white
+                                w-100
+                                h-100
+                            "
                             style="
                                 background-color: rgba(128, 128, 128, 0.65);
                                 top: 0;
@@ -115,7 +123,7 @@ site.data.general.items %}
                             <h3
                                 class="
                                     fs-2
-                                    text-center text-white
+                                    text-center
                                     fw-semibold
                                     text-center
                                     mt-auto
@@ -123,6 +131,9 @@ site.data.general.items %}
                             >
                                 {{i.title}}
                             </h3>
+                            <p class="text-white">
+                                {{i.content|strip_html|truncatewords: 20}}
+                            </p>
                         </div>
                     </div>
                 </a>
