Fix blog layouts and images

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,8 @@ parallax: true
                     <img
                         class="img-fluid"
                         alt="{{i.title}}"
-                        src="{% if i.img %}{{i.img}}{% else %}/assets/img/drone-crop-spraying.jpg{% endif %}"
+                        src="{% if i.img %}{{i.img}}{% else %}/assets/img/agricultural-aircraft-crop-seeding.jpg{% endif %}"
+                        style="height: 100%; width: 100%; object-fit:cover"
                     />
                 </div>
                 <div class="col-md-9 mt-3">
