Fix success message

--- a/success.html
+++ b/success.html
@@ -7,8 +7,11 @@ title: Connect
 <div class="container my-5 py-5" style="min-height: 80vh">
     <div class="row justify-content-between">
         <div class="col-md-6">
-            <h1>Thank You for Reaching Out!</h1>
+            <h1 class="text-dark">Thank You for Reaching Out!</h1>
             <p class="lead mt-5">We will get back to you shortly.</p>
+            <p class="mt-5">
+                <a class="btn btn-primary mt-5" href="/">Back to Homepage</a>
+            </p>
         </div>
     </div>
 </div>
