Add Greg, update team profiles, edit meta tags

--- a/connect.html
+++ b/connect.html
@@ -2,7 +2,7 @@
 layout: base
 permalink: /connect/index.html
 title: Connect | Aero Fleet One
-description: Got a UAS Plan, a vision or a project? Schedule a meeting instantly with one of our team members.
+description: Schedule a meeting instantly with one of our team members.
 ---
 
 {% assign data = site.data.general.items %}
