--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: Aero Fleet One | Agricultural Aviation | Drone Application
-description: A company dedicated to the responsible integration of new technology in the agricultural aviation industry.
+description: A company dedicated to consolidating and invigorating the aerial application industry.
 parallax: True
 ---
 
