--- a/media.html
+++ b/media.html
@@ -2,7 +2,7 @@
 layout: base
 permalink: /media/index.html
 title: Media | Aero Fleet One
-description: Find the latest posts across Aero Fleet One’s social media channels about agricultural aviation, drone technology, ag-tech & more.
+description: Find the latest posts across Aero Fleet One’s social media channels about agricultural aviation, ag-tech & more.
 parallax: True
 curator: True
 ---
