Update team descriptions

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: base
 permalink: /about/index.html
 title: About us | Aero Fleet One | Aerial Application
-description: We are an Aerial Services Company that champions technological advances and practical improvements in the agricultural aviation industry.
+description: We are an Aerial Services Company that champions practical improvements and technological advances  in the agricultural aviation industry.
 parallax: true
 ---
 
